--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -1,4 +1,4 @@
-{{define "content"}}
+{{define "error.html"}}
 <div class="max-w-2xl mx-auto">
     <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
         <strong class="font-bold">Error!</strong>
