--- a/web/templates/news/edit.html
+++ b/web/templates/news/edit.html
@@ -1,4 +1,4 @@
-{{define "content"}}
+{{define "news/edit.html"}}
 <div class="max-w-2xl mx-auto">
     <h1 class="text-2xl font-bold mb-6">Edit News</h1>
 
