--- a/web/templates/news/list.html
+++ b/web/templates/news/list.html
@@ -1,4 +1,4 @@
-{{define "content"}}
+{{define "news/list.html"}}
 <div class="max-w-4xl mx-auto">
     <div class="mb-8">
         <form hx-get="/news/search" hx-trigger="submit" hx-target="#news-list" class="flex gap-4">
@@ -27,6 +27,7 @@
                                 hx-confirm="Are you sure you want to delete this news?"
                                 hx-target="closest div"
                                 hx-swap="outerHTML swap:1s"
+                                hx-headers='{"X-HTTP-Method-Override": "DELETE"}'
                                 class="text-red-500 hover:text-red-600">
                             Delete
                         </button>
